metadata/force-app/main/default/objects/CustomName_ZxYzf__c/CustomName_ZxYzf__c.object-meta.xml
<CustomObject>
    <description>Description_jNmHV</description>
    <label>CustomLabel_DZiRn</label>
    <nameField>
        <label>CustomLabel_DZiRn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_DZiRns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>