metadata/force-app/main/default/objects/CustomName_ZxYzf__c/fields/CustomField_qhozf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qhozf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldpYqPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>