metadata/force-app/main/default/objects/CustomName_ZxYzf__c/fields/CustomField_raHKK__c.field-meta.xml
<CustomField>
    <fullName>CustomField_raHKK__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVarQg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>